# tracerr-rs

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: audit.yml  ci.yml  clippy.yml  release.yml  rustfmt.yml  security-audit.yml  test.yml
src/: lib.rs  trace.rs
