[package]
name = "tracerr"
version = "0.2.0"
edition = "2018"
resolver = "2"
description = "Custom compile time captured error tracing"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/tracerr"
homepage = "https://github.com/instrumentisto/tracerr-rs"
repository = "https://github.com/instrumentisto/tracerr-rs"
readme = "README.md"
keywords = ["backtrace", "error", "stacktrace", "tracing", "tracerr"]
categories = ["rust-patterns"]
include = ["/src/", "/Cargo.toml", "/CHANGELOG.md", "/LICENSE.md", "/README.md"]

[dependencies]
derive_more = "0.99.2"
