[package]
name = "tracerr"
version = "0.3.0-dev"
edition = "2021"
rust-version = "1.56"
description = "Custom compile-time captured error tracing."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/tracerr"
homepage = "https://github.com/instrumentisto/tracerr-rs"
repository = "https://github.com/instrumentisto/tracerr-rs"
readme = "README.md"
keywords = ["backtrace", "error", "stacktrace", "tracing", "tracerr"]
categories = ["rust-patterns"]
include = ["/src/", "/CHANGELOG.md", "/LICENSE.md", "/README.md"]

[dependencies]
derive_more = { version = "0.99.8", features = ["as_mut", "as_ref", "display"], default-features = false }
sealed = "0.3"
