[package]
name = "tracerr"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
description = "Custom compile-time captured error tracing."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/tracerr"
homepage = "https://github.com/instrumentisto/tracerr-rs"
repository = "https://github.com/instrumentisto/tracerr-rs"
readme = "README.md"
keywords = ["backtrace", "error", "stacktrace", "tracing", "tracerr"]
categories = ["rust-patterns"]
include = ["/src/", "/CHANGELOG.md", "/LICENSE.md", "/README.md"]

[dependencies]
derive_more = { version = "2.0", features = ["as_ref", "display"] }
sealed = "0.6"
